[gd_scene load_steps=56 format=3]

[ext_resource type="Script" path="res://Script/BackPack/pl_sell.gd" id="1"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="2"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="3"]
[ext_resource type="Texture2D" uid="uid://bgr3nkkt8l0xs" path="res://Art/BackPack/119.png" id="4"]
[ext_resource type="Texture2D" uid="uid://clcr2i0a0unil" path="res://Art/BackPack/121.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dhkfcv61a0hkl" path="res://Art/BackPack/49.png" id="6"]
[ext_resource type="Texture2D" uid="uid://eqob07i5mlve" path="res://Art/MagicWeapon/222.png" id="7"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[sub_resource type="StyleBoxEmpty" id="16"]
script = null

[sub_resource type="StyleBoxEmpty" id="17"]
script = null

[sub_resource type="StyleBoxEmpty" id="18"]
script = null

[sub_resource type="StyleBoxEmpty" id="19"]
script = null

[sub_resource type="StyleBoxEmpty" id="20"]
script = null

[sub_resource type="StyleBoxEmpty" id="21"]
script = null

[sub_resource type="StyleBoxEmpty" id="22"]
script = null

[sub_resource type="StyleBoxEmpty" id="23"]
script = null

[sub_resource type="StyleBoxEmpty" id="24"]
script = null

[sub_resource type="StyleBoxEmpty" id="25"]
script = null

[sub_resource type="StyleBoxEmpty" id="26"]
script = null

[sub_resource type="StyleBoxEmpty" id="27"]
script = null

[sub_resource type="StyleBoxEmpty" id="28"]
script = null

[sub_resource type="StyleBoxEmpty" id="29"]
script = null

[sub_resource type="StyleBoxEmpty" id="30"]
script = null

[sub_resource type="StyleBoxEmpty" id="31"]
script = null

[sub_resource type="StyleBoxEmpty" id="32"]
script = null

[sub_resource type="StyleBoxEmpty" id="33"]
script = null

[sub_resource type="StyleBoxEmpty" id="34"]
script = null

[sub_resource type="StyleBoxEmpty" id="35"]
script = null

[sub_resource type="StyleBoxEmpty" id="36"]
script = null

[sub_resource type="StyleBoxEmpty" id="37"]
script = null

[sub_resource type="StyleBoxEmpty" id="38"]
script = null

[sub_resource type="StyleBoxEmpty" id="39"]
script = null

[sub_resource type="StyleBoxEmpty" id="40"]
script = null

[sub_resource type="StyleBoxEmpty" id="41"]
script = null

[sub_resource type="StyleBoxEmpty" id="42"]
script = null

[sub_resource type="StyleBoxEmpty" id="43"]
script = null

[sub_resource type="StyleBoxEmpty" id="44"]
script = null

[sub_resource type="StyleBoxEmpty" id="45"]
script = null

[sub_resource type="StyleBoxEmpty" id="46"]
script = null

[sub_resource type="StyleBoxEmpty" id="47"]
script = null

[sub_resource type="StyleBoxEmpty" id="48"]
script = null

[node name="pl_sell" type="Control"]
process_mode = 3
layout_mode = 3
anchor_right = 0.152
anchor_bottom = 0.366
offset_right = 0.119995
offset_bottom = 0.0599823
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 147.0
offset_bottom = 352.0
color = Color(0.12549, 0.12549, 0.12549, 1)
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 144.0
offset_bottom = 248.0
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2
metadata/_edit_lock_ = true

[node name="plsell" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 20
text = "批量出售"
horizontal_alignment = 1

[node name="page_" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 15
placeholder_text = "输入目标背包页码"
alignment = 1

[node name="pt" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/pressed = SubResource( "2" )
theme_override_styles/disabled = SubResource( "3" )
theme_override_styles/hover = SubResource( "4" )
theme_override_styles/hover_pressed = SubResource( "5" )
theme_override_styles/focus = SubResource( "6" )
text = "普通品质"
alignment = 1

[node name="yx" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_styles/normal = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/hover = SubResource( "10" )
theme_override_styles/hover_pressed = SubResource( "11" )
theme_override_styles/focus = SubResource( "12" )
text = "优秀品质"
alignment = 1

[node name="jl" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.666667, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.666667, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_styles/normal = SubResource( "13" )
theme_override_styles/pressed = SubResource( "14" )
theme_override_styles/disabled = SubResource( "15" )
theme_override_styles/hover = SubResource( "16" )
theme_override_styles/hover_pressed = SubResource( "17" )
theme_override_styles/focus = SubResource( "18" )
text = "精良品质"
alignment = 1

[node name="ss" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.592157, 0.254902, 1, 1)
theme_override_colors/font_outline_color = Color(0.592157, 0.254902, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_styles/normal = SubResource( "19" )
theme_override_styles/pressed = SubResource( "20" )
theme_override_styles/disabled = SubResource( "21" )
theme_override_styles/hover = SubResource( "22" )
theme_override_styles/hover_pressed = SubResource( "23" )
theme_override_styles/focus = SubResource( "24" )
text = "史诗品质"
alignment = 1

[node name="xl" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.403922, 0.403922, 1)
theme_override_colors/font_outline_color = Color(0.403922, 0.403922, 0.403922, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_styles/normal = SubResource( "25" )
theme_override_styles/pressed = SubResource( "26" )
theme_override_styles/disabled = SubResource( "27" )
theme_override_styles/hover = SubResource( "28" )
theme_override_styles/hover_pressed = SubResource( "29" )
theme_override_styles/focus = SubResource( "30" )
text = "邪灵品质"
alignment = 1

[node name="hq" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_styles/normal = SubResource( "31" )
theme_override_styles/pressed = SubResource( "32" )
theme_override_styles/disabled = SubResource( "33" )
theme_override_styles/hover = SubResource( "34" )
theme_override_styles/hover_pressed = SubResource( "35" )
theme_override_styles/focus = SubResource( "36" )
text = "魂器品质"
alignment = 1

[node name="cs" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.635294, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.635294, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_styles/normal = SubResource( "37" )
theme_override_styles/pressed = SubResource( "38" )
theme_override_styles/disabled = SubResource( "39" )
theme_override_styles/hover = SubResource( "40" )
theme_override_styles/hover_pressed = SubResource( "41" )
theme_override_styles/focus = SubResource( "42" )
text = "传说品质"
alignment = 1

[node name="sq" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_styles/normal = SubResource( "43" )
theme_override_styles/pressed = SubResource( "44" )
theme_override_styles/disabled = SubResource( "45" )
theme_override_styles/hover = SubResource( "46" )
theme_override_styles/hover_pressed = SubResource( "47" )
theme_override_styles/focus = SubResource( "48" )
text = "神器品质"
alignment = 1

[node name="gxms" type="CheckBox" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.462745, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.462745, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
disabled = true
text = "勾选模式"
alignment = 1

[node name="qd" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource( "4" )
texture_pressed = ExtResource( "4" )
texture_hover = ExtResource( "5" )
texture_disabled = ExtResource( "4" )
stretch_mode = 3

[node name="warning" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 14
text = "注：不会卖出时装，法宝，头衔，或已强化，镶嵌宝石的装备！！"
horizontal_alignment = 1
autowrap_mode = 1

[node name="close" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -4.0
offset_right = 32.0
offset_bottom = 28.0
texture_normal = ExtResource( "6" )
texture_pressed = ExtResource( "6" )
texture_hover = ExtResource( "7" )
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_lock_ = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/pt" to="." method="_on_pt_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/yx" to="." method="_on_yx_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/jl" to="." method="_on_jl_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ss" to="." method="_on_ss_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/xl" to="." method="_on_xl_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/hq" to="." method="_on_hq_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/cs" to="." method="_on_cs_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/sq" to="." method="_on_sq_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/gxms" to="." method="_on_gxms_pressed" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/qd" to="." method="_on_qd_pressed" flags=18]
[connection signal="pressed" from="close" to="." method="_on_close_pressed" flags=18]
